--- a/views/error.pug
+++ b/views/error.pug
@@ -14,13 +14,16 @@ html(lang='fr')
     main.container(role='main')
       h1.mt-5= 'Erreur ' + error.status
       p.lead= error.message
+      if (error.codeblock)
+        pre
+          code= JSON.stringify(error.codeblock)
       p
         | Vous pouvez contacter 
         a(href='/support') le support
         |  en cas de besoin
     footer.footer
       .container
-        span.text-muted © Sarah Duault, 2018
+        span.text-muted © Sarah Duault, 2018 - Environnement de développement activé
     script(src='/assets/js/jquery-3.3.1.min.js')
     script(src='/assets/js/popper.min.js')
     script(src='/assets/js/bootstrap.min.js')
